--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -1,3 +1,22 @@
+@article{achard2007,
+  title = {Efficiency and {{Cost}} of {{Economical Brain Functional Networks}}},
+  author = {Achard, Sophie and Bullmore, Ed},
+  year = {2007},
+  month = feb,
+  journal = {PLOS Computational Biology},
+  volume = {3},
+  number = {2},
+  pages = {e17},
+  publisher = {Public Library of Science},
+  issn = {1553-7358},
+  doi = {10.1371/journal.pcbi.0030017},
+  urldate = {2024-04-17},
+  abstract = {Brain anatomical networks are sparse, complex, and have economical small-world properties. We investigated the efficiency and cost of human brain functional networks measured using functional magnetic resonance imaging (fMRI) in a factorial design: two groups of healthy old (N = 11; mean age = 66.5 years) and healthy young (N = 15; mean age = 24.7 years) volunteers were each scanned twice in a no-task or ``resting'' state following placebo or a single dose of a dopamine receptor antagonist (sulpiride 400 mg). Functional connectivity between 90 cortical and subcortical regions was estimated by wavelet correlation analysis, in the frequency interval 0.06--0.11 Hz, and thresholded to construct undirected graphs. These brain functional networks were small-world and economical in the sense of providing high global and local efficiency of parallel information processing for low connection cost. Efficiency was reduced disproportionately to cost in older people, and the detrimental effects of age on efficiency were localised to frontal and temporal cortical and subcortical regions. Dopamine antagonism also impaired global and local efficiency of the network, but this effect was differentially localised and did not interact with the effect of age. Brain functional networks have economical small-world properties---supporting efficient parallel information transfer at relatively low cost---which are differently impaired by normal aging and pharmacological blockade of dopamine transmission.},
+  langid = {english},
+  keywords = {Age groups,Dopamine,Functional magnetic resonance imaging,Graphs,Memory,Network analysis,Neural networks,Random graphs},
+  file = {C:\Users\Soki\Zotero\storage\XVRVVM3X\Achard and Bullmore - 2007 - Efficiency and Cost of Economical Brain Functional.pdf}
+}
+
 @article{bellingeri2018,
   title = {Robustness of Weighted Networks},
   author = {Bellingeri, Michele and Cassi, Davide},
@@ -30,6 +49,23 @@
   langid = {english},
   keywords = {Information spreading,link (node) failure,Network attack,Network Robustness and Resiliency,Social network},
   file = {C:\Users\Soki\Zotero\storage\IPP8DXDM\Bellingeri et al. - 2020 - Link and Node Removal in Real Social Networks A R.pdf}
+}
+
+@article{broder2000,
+  title = {Graph Structure in the {{Web}}},
+  author = {Broder, Andrei and Kumar, Ravi and Maghoul, Farzin and Raghavan, Prabhakar and Rajagopalan, Sridhar and Stata, Raymie and Tomkins, Andrew and Wiener, Janet},
+  year = {2000},
+  month = jun,
+  journal = {Computer Networks},
+  volume = {33},
+  number = {1},
+  pages = {309--320},
+  issn = {1389-1286},
+  doi = {10.1016/S1389-1286(00)00083-9},
+  urldate = {2024-04-17},
+  abstract = {The study of the Web as a graph is not only fascinating in its own right, but also yields valuable insight into Web algorithms for crawling, searching and community discovery, and the sociological phenomena which characterize its evolution. We report on experiments on local and global properties of the Web graph using two AltaVista crawls each with over 200 million pages and 1.5 billion links. Our study indicates that the macroscopic structure of the Web is considerably more intricate than suggested by earlier experiments on a smaller scale.},
+  keywords = {Diameter,Graph structure,Web measurement},
+  file = {C:\Users\Soki\Zotero\storage\FJ6ZL6CK\S1389128600000839.html}
 }
 
 @article{cerqueti2019,
